FLX-225 Prevent cards from wrapping

--- a/app/stylesheets/theme/_common/style.scss
+++ b/app/stylesheets/theme/_common/style.scss
@@ -12,6 +12,7 @@
   height: auto;
   height: 100%;
   min-height: 100%;
+  white-space: nowrap;
 }
 #header{
   height: $header_height;
